--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,6 +1,6 @@
 
 <h1 class="category-name"> <%= @category.name%> </h1> <br>
-<button disabled class = "prev-category" data-id="<%=@category.id%>">Previous Category </button> || <button class="next-category" last-category-id= "<%=Category.last.id%>" data-id="<%=@category.id%>"> Next Category</button>
+<button disabled class = "prev-category" data-id="<%=@category.id%>">Previous Category </button> || <button enabled class="next-category" last-category-id= "<%=Category.last.id%>" data-id="<%=@category.id%>"> Next Category</button>
 <br><br>
 
 <button class="next-supply" supplyData-id="1" data-id="<%=@category.id%>"data-userid="<%=@user.id%>"> Next Supply </button>
@@ -27,16 +27,17 @@
 
 <script type = "text/javascript" charset = "utf-8">
   $(function(){
-    var categoryId
+    var categoryId,i
     $(".next-category, .prev-category").on("click", function(){
+      i=0
       if($(this).attr("class") === "next-category"){
         categoryId = parseInt($(".next-category").attr("data-id")) + 1;
       }
       else{
         --categoryId ;
       }
-      /*must disable button for next on last elements*/
-      if ($(".next-category").attr("last-category-id") == $(".next-category").attr("data-id")){
+      /*disables button for first and last elements*/
+      if ($(".next-category").attr("last-category-id") == categoryId){
         $(".next-category").prop('disabled', true)
       }else{
         $(".next-category").prop('disabled', false)
@@ -46,36 +47,34 @@
       }else{
           $('.prev-category').prop('disabled', true)
       }
-      if($(this).attr("last-category-id") == categoryId){
-        $(".next-category").prop("disabled", true)
-      }else{
-        $(".next-category").prop("disabled",false)
-      }
+      /* make the current supply data-id the next/previous category id*/
       $(".next-supply").attr("data-id", categoryId)
+      $(".next-supply").click()
       $.get("/categories/" + categoryId + ".json", function(data){
-        console.log(data)
+
         $(".category-name").text(data["name"])
         /*got the supply to be the same category id as the category shown */
         $(".supply-heading").text(data["supplies"]["name"])
         $(".next-category").attr("data-id", data["id"])
         $(".prev-category").attr("data-id", data["id"])
         /* need to have the supply change to the first supply of the new category*/
+        $(".next-supply").attr("data-id", data["id"])
 
       })
     })
-    let i = 0; /* in order to go through all of the supplies in the JSON */
     $(".next-supply").on("click", function(){
       $(".edit-delete-supply").text("");
       var user = $(this).attr("data-userid");
       var id = $(this).attr("data-id");
       var supplyId = $(this).attr("supplyData-id");
+
       $.get("/categories/" + id + ".json", function(data){
-        var supplies = data.supplies
-        $(".supply-heading").text(supplies[i].name)
-        $(".supply-price").text(supplies[i].price);
-        $(".supply-quantity").text(supplies[i].quantity);
-        $(".supply-description").text(supplies[i].description)
-        $(".next-supply").attr("supplyData-id", supplies[i].id)
+        var supplies = data["supplies"]
+        $(".supply-heading").text(supplies[i]["name"])
+        $(".supply-price").text(supplies[i]["price"]);
+        $(".supply-quantity").text(supplies[i]["quantity"]);
+        $(".supply-description").text(supplies[i]["description"])
+        $(".next-supply").attr("supplyData-id", supplies[i]["id"])
         supplyId = $(this).attr("supplyData-id");
         if(user == supplies[i].user_id){
           /* need to fix delete link*/
