next category correctly shows first supply

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -27,10 +27,11 @@
 
 <script type = "text/javascript" charset = "utf-8">
   $(function(){
-    var categoryId
+    var categoryId, supplyId
     let i=-1
     $(".next-category, .prev-category").on("click", function(){
-      i=0
+      i=-1
+
       if($(this).attr("class") === "next-category"){
         categoryId = parseInt($(".next-category").attr("data-id")) + 1;
       }
@@ -63,20 +64,20 @@
 
       })
     })
+    /*previous and next supply button correctly showing supply*/
     $(".next-supply").on('click', function(){
       i+=1
     })
     $(".prev-supply").on('click', function(){
       i-=1
     })
+    /*previous and next supply button adding supply information to DOM*/
     $(".prev-supply, .next-supply").on("click", function(){
       $(".edit-delete-supply").text("");
       var user = $(this).attr("data-userid");
       var id = $(this).attr("data-id");
-      var supplyId = $(this).attr("supplydata-id");
       $.get("/categories/" + id + ".json", function(data){
         var supplies = data["supplies"]
-        console.log(i)
         $(".supply-heading").text(supplies[i]["name"])
         $(".supply-price").text(supplies[i]["price"]);
         $(".supply-quantity").text(supplies[i]["quantity"]);
@@ -98,7 +99,7 @@
 
         }
 
-        supplyId = $(this).attr("supplyData-id");
+        supplyId = $(this).attr("supplydata-id");
         if(user == supplies[i].user_id){
           /* need to fix delete link*/
           $(".edit-delete-supply").append('<a href="/categories/' + id + '/supplies/' + supplyId + '/edit" class="edit-supply">Edit</a> || <button class="delete-supply">Delete</button> ')
